@@ -27,6 +27,7 @@ Version 1.3-svn:
    * game management
      * client now tells the server if a game ended in victory or defeat
      * configurable castle size for random map generator (patch #598, FR #3232)
+     * team names translation now supported
    * scenarios
      * scenarios can set faction, recruit, leader, and some other initial settings
        previously ignored in multiplayer
